SAVE before final project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="one">KAMIEŃ</button>
+			<button id="one">PAPIER</button>
+			<button id="one">NOŻYCE1</button>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
