ADD user interface & interactions

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button id="one">KAMIEŃ</button>
-			<button id="one">PAPIER</button>
-			<button id="one">NOŻYCE1</button>
+			<button id="play-rock">KAMIEŃ</button>
+			<button id="play-paper">PAPIER</button>
+			<button id="play-scissors">NOŻYCE</button>
 		</div>
 		<div id="messages"></div>
 	</div>
