--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<button id="play-paper">PAPIER</button>
 			<button id="play-scissors">NOŻYCE</button>
 		</div>
+		<div id="result"></div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
